edit news section

--- a/src/index.html
+++ b/src/index.html
@@ -398,8 +398,11 @@
 			<h6 class="news-head__info">Capture the last moments of summer <br>drinking our latest espresso. </h6>
 		</div>
 		<div class="news-foot">
-			<a class="news-foot__btn">Order nov</a>
+			<a class="news-foot__btn">Order now</a>
 		</div>
+	</section>
+	<section>
+
 	</section>
 </body>
 
