end of main styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Artboard</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+	<link rel="stylesheet" href="./styles/offer.css">
 	<link rel="stylesheet" href="./styles/news.css" type="text/css">
 	<link rel="stylesheet" href="./styles/shoplist.css">
 	<link rel="stylesheet" href="./styles/mystery-dish.css" type="text/css">
@@ -391,6 +392,8 @@
 			<button class="shoplist-btn__disagree" type="reset">Empty list</button>
 		</div>
 	</section>
+
+
 	<section class="news">
 		<div class="news-head">
 			<span class="news-head__date">The summer of 2015</span>
@@ -401,8 +404,87 @@
 			<a class="news-foot__btn">Order now</a>
 		</div>
 	</section>
-	<section>
 
+
+	<section class="offer">
+		<div class="offer-bl">
+			<span class="offer-bl__date">The summer of 2015</span>
+			<h3 class="offer-bl__title">Grapefruit + Jalapeño infused <br> tequila cocktail</h3>
+			<div class="offer-bl__rating">
+				<button class="offer-bl__rating-btn" type="button">
+					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					 xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
+							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
+								<g id="linguine" transform="translate(220.000000, 77.000000)">
+									<g id="rating" transform="translate(38.000000, 107.000000)">
+										<path d="M105,13.2091434 L98.8148189,17.5131714 L100.996867,10.3006969 L94.9921668,5.74825786 L102.525928,5.59473143 L105,-1.5228586 L107.474072,5.59473143 L115.007833,5.74825786 L109.003133,10.3006969 L111.185181,17.5131714 L105,13.2091434 Z"
+										 id="Star-1"></path>
+									</g>
+								</g>
+							</g>
+						</g>
+					</svg></button>
+				<button class="offer-bl__rating-btn" type="button">
+					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					 xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
+							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
+								<g id="linguine" transform="translate(220.000000, 77.000000)">
+									<g id="rating" transform="translate(38.000000, 107.000000)">
+										<path d="M105,13.2091434 L98.8148189,17.5131714 L100.996867,10.3006969 L94.9921668,5.74825786 L102.525928,5.59473143 L105,-1.5228586 L107.474072,5.59473143 L115.007833,5.74825786 L109.003133,10.3006969 L111.185181,17.5131714 L105,13.2091434 Z"
+										 id="Star-2"></path>
+									</g>
+								</g>
+							</g>
+						</g>
+					</svg></button>
+				<button class="offer-bl__rating-btn" type="button">
+					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					 xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
+							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
+								<g id="linguine" transform="translate(220.000000, 77.000000)">
+									<g id="rating" transform="translate(38.000000, 107.000000)">
+										<path d="M105,13.2091434 L98.8148189,17.5131714 L100.996867,10.3006969 L94.9921668,5.74825786 L102.525928,5.59473143 L105,-1.5228586 L107.474072,5.59473143 L115.007833,5.74825786 L109.003133,10.3006969 L111.185181,17.5131714 L105,13.2091434 Z"
+										 id="Star-3"></path>
+									</g>
+								</g>
+							</g>
+						</g>
+					</svg></button>
+				<button class="offer-bl__rating-btn" type="button">
+					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					 xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
+							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
+								<g id="linguine" transform="translate(220.000000, 77.000000)">
+									<g id="rating" transform="translate(38.000000, 107.000000)">
+										<path d="M105,13.2091434 L98.8148189,17.5131714 L100.996867,10.3006969 L94.9921668,5.74825786 L102.525928,5.59473143 L105,-1.5228586 L107.474072,5.59473143 L115.007833,5.74825786 L109.003133,10.3006969 L111.185181,17.5131714 L105,13.2091434 Z"
+										 id="Star-4"></path>
+									</g>
+								</g>
+							</g>
+						</g>
+					</svg></button>
+				<button class="offer-bl__rating-btn" type="button">
+					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+					 xmlns:xlink="http://www.w3.org/1999/xlink">
+						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
+							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
+								<g id="linguine" transform="translate(220.000000, 77.000000)">
+									<g id="rating" transform="translate(38.000000, 107.000000)">
+										<path d="M105,13.2091434 L98.8148189,17.5131714 L100.996867,10.3006969 L94.9921668,5.74825786 L102.525928,5.59473143 L105,-1.5228586 L107.474072,5.59473143 L115.007833,5.74825786 L109.003133,10.3006969 L111.185181,17.5131714 L105,13.2091434 Z"
+										 id="Star-5"></path>
+									</g>
+								</g>
+							</g>
+						</g>
+					</svg></button>
+				<span class="offer-bl__rating-result">4.1</span>
+			</div>
+			<a class="offer-bl__btn" href="#">Recipe</a>
+		</div>
 	</section>
 </body>
 
