editing styles for btn

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Artboard</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+	<link rel="stylesheet" href="./styles/btn.css">
 	<link rel="stylesheet" href="./styles/offer.css">
 	<link rel="stylesheet" href="./styles/news.css" type="text/css">
 	<link rel="stylesheet" href="./styles/shoplist.css">
@@ -160,7 +161,7 @@
 			</span>
 			<span class="recipe__info-item">196<br>nutritions</span>
 		</div>
-		<a class="recipe__btn" href="#">Recipe</a>
+		<a class="default-btn" href="#">Recipe</a>
 	</section>
 
 	<section class="list">
@@ -224,7 +225,7 @@
 				<h6 class="date-info__main-item">AUGUST, 25TH</h6>
 			</div>
 			<div class="date-info__footer">
-				<a href="#" class="date-info__footer-btn">Add event</a>
+				<a href="#" class="date-info__footer-btn default-btn">Add event</a>
 			</div>
 		</div>
 		<div class="date-calendar">
@@ -266,7 +267,7 @@
 				</svg></button>
 			<span class="voting-item__text" href="#">Fried fish with <br> olives and salami</span>
 		</div>
-		<button class="voting-mainbtn" type="submit">Order</button>
+		<button class="default-btn voting-mainbtn" type="submit">Order</button>
 	</section>
 
 	<section class="mystery-dish">
@@ -388,8 +389,8 @@
 			</tbody>
 		</table>
 		<div class="shoplist-btn">
-			<button class="shoplist-btn__agree" type="button">Add item</button>
-			<button class="shoplist-btn__disagree" type="reset">Empty list</button>
+			<button class="shoplist-btn__agree  default-btn" type="button">Add item</button>
+			<button class="shoplist-btn__disagree  default-btn" type="reset">Empty list</button>
 		</div>
 	</section>
 
