edit hover styles

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
 			</span>
 			<span class="recipe__info-item">196<br>nutritions</span>
 		</div>
-		<a class="default-btn" href="#">Recipe</a>
+		<a class="default-btn recipe__btn" href="#">Recipe</a>
 	</section>
 
 	<section class="list">
@@ -402,7 +402,7 @@
 			<h6 class="news-head__info">Capture the last moments of summer <br>drinking our latest espresso. </h6>
 		</div>
 		<div class="news-foot">
-			<a class="news-foot__btn">Order now</a>
+			<a class="news-foot__btn default-btn">Order now</a>
 		</div>
 	</section>
 
@@ -484,7 +484,7 @@
 					</svg></button>
 				<span class="offer-bl__rating-result">4.1</span>
 			</div>
-			<a class="offer-bl__btn" href="#">Recipe</a>
+			<a class="offer-bl__btn  default-btn" href="#">Recipe</a>
 		</div>
 	</section>
 </body>
