end of many styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Artboard</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+	<link rel="stylesheet" href="./styles/stars.css">
 	<link rel="stylesheet" href="./styles/btn.css">
 	<link rel="stylesheet" href="./styles/offer.css">
 	<link rel="stylesheet" href="./styles/news.css" type="text/css">
@@ -56,7 +57,7 @@
 					</g>
 				</g>
 			</svg></a>
-		<a href="#" class="nav-link link__no-bottom">
+		<a href="#" class="nav-link">
 			<svg class="nav-link__icon" width="32px" height="24px" viewBox="0 0 32 24" version="1.1" xmlns="http://www.w3.org/2000/svg"
 			 xmlns:xlink="http://www.w3.org/1999/xlink">
 				<g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
@@ -72,10 +73,9 @@
 
 	<section class="recipe">
 		<h3 class="recipe__title">Fresh Linguine, <br> Tomatoes and Herbs</h3>
-		<div class="recipe__rating">
-			<button class="recipe__rating-btn" type="button">
-				<svg class="recipe__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+		<div class="rating">
+			<button class="rating-btn" type="button">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -87,9 +87,8 @@
 						</g>
 					</g>
 				</svg></button>
-			<button class="recipe__rating-btn" type="button">
-				<svg class="recipe__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+			<button class="rating-btn" type="button">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -101,9 +100,8 @@
 						</g>
 					</g>
 				</svg></button>
-			<button class="recipe__rating-btn" type="button">
-				<svg class="recipe__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+			<button class="rating-btn" type="button">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -115,9 +113,8 @@
 						</g>
 					</g>
 				</svg></button>
-			<button class="recipe__rating-btn" type="button">
-				<svg class="recipe__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+			<button class="rating-btn" type="button">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -129,9 +126,8 @@
 						</g>
 					</g>
 				</svg></button>
-			<button class="recipe__rating-btn" type="button">
-				<svg class="recipe__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+			<button class="rating-btn" type="button">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -143,7 +139,7 @@
 						</g>
 					</g>
 				</svg></button>
-			<span class="recipe__rating-result">4.1</span>
+			<span class="rating-result">4.1</span>
 		</div>
 		<a class="recipe__status" href="#">Highly recommended</a>
 		<div class="recipe__info">
@@ -176,8 +172,7 @@
 		</ul>
 		<div class="list__page-change">
 			<a class="list__page-change__btn" href="#">
-				<svg class="list__page-change__btn-icon" width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-970.000000, -361.000000)">
 							<g id="ingredients" transform="translate(836.000000, 80.000000)">
@@ -189,8 +184,7 @@
 					</g>
 				</svg></a>
 			<a class="list__page-change__btn" href="#">
-				<svg class="list__page-change__btn-icon" width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-970.000000, -361.000000)">
 							<g id="ingredients" transform="translate(836.000000, 80.000000)">
@@ -202,8 +196,7 @@
 					</g>
 				</svg></a>
 			<a class="list__page-change__btn" href="#">
-				<svg class="list__page-change__btn-icon" width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="8px" height="8px" viewBox="0 0 8 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-970.000000, -361.000000)">
 							<g id="ingredients" transform="translate(836.000000, 80.000000)">
@@ -241,8 +234,7 @@
 		<h3 class="voting-title"> My Friday Meal</h3>
 		<div class="voting-item">
 			<button class="voting-item__btn" type="button">
-				<svg class="voting-item__btn-icon" width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-136.000000, -607.000000)" stroke="#7AB046" stroke-width="2">
 							<g id="my-friday-meal" transform="translate(100.000000, 436.000000)">
@@ -255,8 +247,7 @@
 		</div>
 		<div class="voting-item">
 			<button class="voting-item__btn" type="button">
-				<svg class="voting-item__btn-icon" width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-136.000000, -607.000000)" stroke="#7AB046" stroke-width="2">
 							<g id="my-friday-meal" transform="translate(100.000000, 436.000000)">
@@ -278,8 +269,7 @@
 				<h5 class="mystery-dish__main-title__headline-time">~ 20 min</h5>
 			</div>
 			<div class="mystery-dish__main-raiting">
-				<svg class="mystery-dish__main-raiting__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 						<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 							<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -322,66 +312,66 @@
 					<td></td>
 				</tr>
 			</thead>
-			<tbody class="shoplist-table__body">
-				<tr class="shoplist-table__body-line">
-					<td class="shoplist-table__body-line__main">
+			<tbody>
+				<tr class="shoplist-table__row">
+					<td>
 						<img src="./images/orange.svg" alt="">
-						<div class="shoplist-table__body-line__main-info">Oranges <br><span class="shoplist-table__body-line__main-info-scnd">$0.5/piece</span></div>
+						<div class="shoplist-table__row-info">Oranges <br><span class="shoplist-table__row-info__price">$0.5/piece</span></div>
 					</td>
-					<td class="shoplist-table__body-line__qty">
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+					<td>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/less.png">
 						</button>
-						<span class="shopshoplist-table__body-line__qty-nmbr">99</span>
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+						<span class="shoplist-table__row-nmbr">99</span>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/more.png">
 						</button>
 					</td>
-					<td class="shoplist-table__body-line__price">$<span>99</span></td>
+					<td class="shoplist-table__row-price">$<span>99</span></td>
 					<td>
-						<button class="shoplist-table__body-line__qty-btn" type="reset">
+						<button class="shoplist-table__row-btn" type="reset">
 							<img src="../images/del.png">
 						</button>
 					</td>
 				</tr>
-				<tr class="shoplist-table__body-line">
-					<td class="shoplist-table__body-line__main">
+				<tr class="shoplist-table__row">
+					<td>
 						<img src="./images/lettuce.svg" alt="">
-						<div class="shoplist-table__body-line__main-info">Lettuce <br><span class="shoplist-table__body-line__main-info-scnd">$0.5/piece</span></div>
+						<div class="shoplist-table__row-info">Lettuce <br><span class="shoplist-table__row-info__price">$0.5/piece</span></div>
 					</td>
-					<td class="shoplist-table__body-line__qty">
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+					<td>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/less.png">
 						</button>
-						<span class="shopshoplist-table__body-line__qty-nmbr">99</span>
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+						<span class="shoplist-table__row-nmbr">99</span>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/more.png">
 						</button>
 					</td>
-					<td class="shoplist-table__body-line__price">$<span>99</span></td>
+					<td class="shoplist-table__row-price">$<span>99</span></td>
 					<td>
-						<button class="shoplist-table__body-line__qty-btn" type="reset">
+						<button class="shoplist-table__row-btn" type="reset">
 							<img src="../images/del.png">
 						</button>
 					</td>
 				</tr>
-				<tr class="shoplist-table__body-line">
-					<td class="shoplist-table__body-line__main">
+				<tr class="shoplist-table__row">
+					<td>
 						<img src="./images/strawberry.svg" alt="">
-						<div class="shoplist-table__body-line__main-info">Strawberries <br><span class="shoplist-table__body-line__main-info-scnd">$0.5/piece</span></div>
+						<div class="shoplist-table__row-info">Strawberries <br><span class="shoplist-table__row-info__price">$0.5/piece</span></div>
 					</td>
-					<td class="shoplist-table__body-line__qty">
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+					<td>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/less.png">
 						</button>
-						<span class="shopshoplist-table__body-line__qty-nmbr">99</span>
-						<button class="shoplist-table__body-line__qty-btn" type="button">
+						<span class="shoplist-table__row-nmbr">99</span>
+						<button class="shoplist-table__row-btn" type="button">
 							<img src="../images/more.png">
 						</button>
 					</td>
-					<td class="shoplist-table__body-line__price">$<span>99</span></td>
+					<td class="shoplist-table__row-price">$<span>99</span></td>
 					<td>
-						<button class="shoplist-table__body-line__qty-btn" type="reset">
+						<button class="shoplist-table__row-btn" type="reset">
 							<img src="../images/del.png">
 						</button>
 					</td>
@@ -411,10 +401,9 @@
 		<div class="offer-bl">
 			<span class="offer-bl__date">The summer of 2015</span>
 			<h3 class="offer-bl__title">Grapefruit + Jalapeño infused <br> tequila cocktail</h3>
-			<div class="offer-bl__rating">
-				<button class="offer-bl__rating-btn" type="button">
-					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-					 xmlns:xlink="http://www.w3.org/1999/xlink">
+			<div class="rating">
+				<button class="rating-btn offer__star" type="button">
+					<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 								<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -426,9 +415,8 @@
 							</g>
 						</g>
 					</svg></button>
-				<button class="offer-bl__rating-btn" type="button">
-					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-					 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<button class="rating-btn offer__star" type="button">
+					<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 								<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -440,9 +428,8 @@
 							</g>
 						</g>
 					</svg></button>
-				<button class="offer-bl__rating-btn" type="button">
-					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-					 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<button class="rating-btn offer__star" type="button">
+					<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 								<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -454,9 +441,8 @@
 							</g>
 						</g>
 					</svg></button>
-				<button class="offer-bl__rating-btn" type="button">
-					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
-					 xmlns:xlink="http://www.w3.org/1999/xlink">
+				<button class="rating-btn offer__star" type="button">
+					<svg width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
 								<g id="linguine" transform="translate(220.000000, 77.000000)">
@@ -468,8 +454,8 @@
 							</g>
 						</g>
 					</svg></button>
-				<button class="offer-bl__rating-btn" type="button">
-					<svg class="offer-bl__rating-btn__icon" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
+				<button class="rating-btn" type="button">
+					<svg class="offer__star" width="24px" height="22px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
 					 xmlns:xlink="http://www.w3.org/1999/xlink">
 						<g id="Page-1" stroke-width="1" fill-rule="evenodd">
 							<g id="Artboard-1" transform="translate(-351.000000, -181.000000)">
@@ -482,7 +468,7 @@
 							</g>
 						</g>
 					</svg></button>
-				<span class="offer-bl__rating-result">4.1</span>
+				<span class="rating-result">4.1</span>
 			</div>
 			<a class="offer-bl__btn  default-btn" href="#">Recipe</a>
 		</div>
