--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Artboard</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+	<!-- <link rel="stylesheet" href="./styles/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="./styles/stars.css">
 	<link rel="stylesheet" href="./styles/btn.css">
 	<link rel="stylesheet" href="./styles/offer.css">
@@ -161,7 +162,7 @@
 	</section>
 
 	<section class="list">
-		<h3 class="list-title">Ingredients</h3>
+		<h4 class="list-title">Ingredients</h4>
 		<ul class="list-main">
 			<li class="list-main__item"><a href="#" class="list-main__item-link"><span>200g</span>fresh linguine</a></li>
 			<li class="list-main__item"><a href="#" class="list-main__item-link"><span>2-3</span>cups tomatoes</a></li>
